Add Intex navbar

--- a/index.html
+++ b/index.html
@@ -1,48 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <Style>
-        .background{
-            background-image: url("cutoutpics/circle.png");
-        }
-    </Style>
-   
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Outfitter</title>
 </head>
 <body>
-    <section id="header">
-    <a href="#"><img src="cutoutpics/2.png" class="logo"  alt=" no logo"></a>
-    <div>
-            <ul id="navbar">
-                <li><a  class="active" href ="#">Home</a></li>
-                <li><a href ="#">Shop</a></li>
-                <li><a href ="#">Cart</a></li>
-                <li><a href ="#">Contact</a></li>
-                <li><a href ="#">Address</a></li>
-                <li><a href ="#">About Us</a></li>
-
-            </ul>
-
-
+    <div id="navbar">
+        <div class="inner">
+            <a href="#" class="logo">
+                <img src="./cutoutpics/2.png" alt="">
+            </a>
+            <menu>
+                <ul>
+                    <il class="menu_item">Home</il>
+                    <il class="menu_item">Shop</il>
+                    <il class="menu_item">Contact</il>
+                    <il class="menu_item">Address</il>
+                    <il class="menu_item">About Us</il>
+                </ul>
+            </menu>
+        </div>
     </div>
-    </section>
-
-<section id="body">
-    <div class="background"></div>
-    
-    <h3 > <b >Designed-Outfits-here </h3>
-    <h1>Super Summer Sale</b></h1>
-    <h1><b>On-Stock Available </b></h1>
-    <p> best sales  to get ur hands on upto 70% off!</p>
-    <button> Shop Now</button>
-
-</section>
-
-
-
 </body>
 </html>
