--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Outfitter</title>
 </head>
 <body>
@@ -14,11 +15,11 @@
             </a>
             <menu>
                 <ul>
-                    <il class="menu_item">Home</il>
-                    <il class="menu_item">Shop</il>
-                    <il class="menu_item">Contact</il>
-                    <il class="menu_item">Address</il>
-                    <il class="menu_item">About Us</il>
+                    <il class="menu_item"><a href="#">Home</a></il>
+                    <il class="menu_item"><a href="#">Shop</a></il>
+                    <il class="menu_item"><a href="#">Contact</a></il>
+                    <il class="menu_item"><a href="#">Address</a></il>
+                    <il class="menu_item"><a href="#">About Us</a></il>
                 </ul>
             </menu>
         </div>
