--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <title>Outfitter</title>
 </head>
 <body>
-    <div id="navbar">
+    <nav id="navbar">
         <div class="inner">
             <a href="#" class="logo">
                 <img src="./cutoutpics/2.png" alt="">
             </a>
             <menu>
                 <ul>
-                    <il class="menu_item"><a href="#">Home</a></il>
+                    <il class="menu_item"><a href="#home" class="activ">Home</a></il>
                     <il class="menu_item"><a href="#">Shop</a></il>
                     <il class="menu_item"><a href="#">Contact</a></il>
                     <il class="menu_item"><a href="#">Address</a></il>
@@ -23,7 +23,23 @@
                 </ul>
             </menu>
         </div>
-    </div>
+    </nav>
+    <section id="home">
+        <div class="inner">
+            <div class="left">
+                <h2>Lorem ipsum dolor.</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur eaque est pariatur molestias iure maxime distinctio id. Quasi accusamus nisi, excepturi, doloremque a, consequatur deleniti repellendus autem illo tempora ea?</p>
+                <div class="btn_box">
+                    <a class="btn" href="#">Shop Now</a>
+                </div>
+            </div>
+            <div class="right">
+                <div class="img">
+                    <img src="./cutoutpics/1.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 
